Add test to base layer