@@ -5,8 +5,10 @@ import dk.lundogbendsen.springbootcourse.urlshortener.model.User;
 import dk.lundogbendsen.springbootcourse.urlshortener.service.exceptions.*;
 import org.springframework.stereotype.Service;
 
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.HashMap;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -39,8 +41,8 @@ public class TokenService {
             throw new IllegalTargetUrlException();
         }
         try {
-            new URI(targetUrl);
-        } catch (URISyntaxException e) {
+            new URL(targetUrl);
+        } catch (MalformedURLException e) {
             throw new InvalidTargetUrlException();
         }
 
